--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.30.0",
+    "@monaco-editor/react": "^4.7.0",
     "apache-arrow": "^17.0.0",
+    "monaco-editor": "^0.54.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-monaco-editor-esm": "^2.0.2",
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "devDependencies": {
+    "@tomjs/vite-plugin-monaco-editor": "^1.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/webextension-polyfill": "^0.10.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "~5.6.3",
     "vite": "^5.0.0",
+    "vite-plugin-monaco-editor": "^1.0.11",
     "vite-plugin-web-extension": "^4.0.0",
     "webextension-polyfill": "^0.10.0"
   }
