--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,9 @@
   },
   "background": {
     "{{chrome}}.service_worker": "src/background.ts",
-    "{{firefox}}.scripts": ["src/background.ts"]
+    "{{firefox}}.scripts": [
+      "src/background.ts",
+      "src/pages/Popup.tsx"
+    ]
   }
 }
