--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "monaco-editor": "^0.54.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sql-formatter": "^15.6.10",
     "vite-plugin-monaco-editor-esm": "^2.0.2",
     "vite-plugin-static-copy": "^3.1.4"
   },
